@@ -1,3 +1,11 @@
+Wed Jan  2 16:46:46 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/accessdb.c (main), src/catman.c (main), src/globbing_test.c
+	  (main), src/lexgrog_test.c (main), src/man.c (main), src/manconv.c
+	  (main), src/mandb.c (main), src/manpath.c (main), src/whatis.c
+	  (main), src/wrapper.c (main), src/zsoelim.l (main): Bind the
+	  "man-db-gnulib" textual domain as well as "man-db".
+
 Wed Jan  2 00:12:48 GMT 2008  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* po/nl.po: New from Translation Project.
